# hashcaster-exploration

./: .gitignore  Cargo.toml  README.md  bench.sh  clippy.toml  profile.json
crates/boolcheck/: Cargo.toml
crates/boolcheck/benches/: extend.rs
crates/boolcheck/src/: algebraic.rs  and.rs  bool_trait.rs  boolcheck_builder.rs  boolcheck_single.rs  boolcheck_trait.rs  builder.rs  lib.rs  package.rs  ternary_mapping.rs
crates/field/: Cargo.toml
crates/field/src/: binary_field.rs  bit_iterator.rs  frobenius.rs  frobenius_cobasis.rs  lib.rs  matrix.rs  matrix_efficient.rs  matrix_lin.rs  small_uint.rs  utils.rs
crates/field/src/backend/: karatsuba.rs  mod.rs  test_utils.rs
crates/keccak/: Cargo.toml
crates/keccak/benches/: keccak.rs
crates/keccak/src/: chi.rs  keccak_no_pcs.rs  keccak_pcs.rs  lib.rs  linear.rs  main.rs  pcs.rs
crates/keccak/src/matrix/: composition.rs  identity.rs  mod.rs  sum.rs
crates/keccak/src/theta/: mod.rs  theta_ac.rs  theta_cd.rs  theta_de.rs
crates/lincheck/: Cargo.toml
crates/lincheck/src/: builder.rs  lib.rs  prodcheck.rs
crates/matrix/: Cargo.toml
crates/matrix/src/: lib.rs
crates/multiclaim/: Cargo.toml
crates/multiclaim/src/: builder.rs  lib.rs
crates/pcs/: Cargo.toml
crates/pcs/src/: challenger.rs  error.rs  lib.rs  proof.rs  utils.rs
crates/poly/: Cargo.toml
crates/poly/src/: compressed.rs  evaluation.rs  lib.rs  multinear_lagrangian.rs  point.rs  univariate.rs  utils.rs
crates/primitives/: Cargo.toml
crates/primitives/benches/: matrix_efficient.rs
crates/primitives/src/: binary_field.rs  bit_iterator.rs  frobenius.rs  frobenius_cobasis.rs  lib.rs  linear_trait.rs  matrix.rs  matrix_efficient.rs  matrix_lin.rs  small_uint.rs  sumcheck.rs  utils.rs
crates/primitives/src/backend/: karatsuba.rs
crates/primitives/src/poly/: compressed.rs  evaluation.rs  multinear_lagrangian.rs  point.rs  univariate.rs
examples/keccak/: Cargo.toml
examples/keccak/src/: chi.rs  linear.rs  main.rs  pcs.rs  rho_pi.rs
examples/keccak/src/matrix/: composition.rs  identity.rs  sum.rs
examples/keccak/src/theta/: mod.rs  theta_ac.rs  theta_cd.rs  theta_de.rs
