[workspace.package]
name = "hashcaster-exploration"
version = "0.1.0"
edition = "2021"
rust-version = "1.83"

[workspace]
members = ["crates/boolcheck", "crates/field", "crates/poly", "crates/matrix"]

[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.unreachable_pub = "warn"
rust.unused_must_use = "deny"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rustdoc.all = "warn"
rust.dead_code = "allow"

[workspace.lints.clippy]
# all lints that are on by default (correctness, suspicious, style, complexity, perf)
all = { level = "warn", priority = -1 }

# new lints that are still under development
nursery = { level = "warn", priority = -1 }
# avoid lints that are too pedantic
future_not_send = "allow"
fallible_impl_from = "allow"

# lints which are rather strict or have occasional false positives
pedantic = { level = "warn", priority = -1 }
# avoid lints that are too pedantic
must_use_candidate = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
default_trait_access = "allow"
module_name_repetitions = "allow"

[workspace.dependencies]
hashcaster-field = { path = "crates/field" }
hashcaster-boolcheck = { path = "crates/boolcheck" }
hashcaster-poly = { path = "crates/poly" }
hashcaster-matrix = { path = "crates/matrix" }

derive_more = "1.0"
bytemuck = "1.0"
num-traits = "0.2"
ruint = "1.0"
rayon = "1.0"
rand = "0.8"
itertools = "0.13"
unroll = "0.1"
