[workspace.package]
name = "hashcaster-exploration"
version = "0.1.0"
edition = "2021"
rust-version = "1.84"

[workspace]
members = [
    "crates/boolcheck",
    "crates/primitives",
    "crates/lincheck",
    "crates/multiclaim",
    "crates/pcs",
    "examples/keccak",
]

[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.unreachable_pub = "warn"
rust.unused_must_use = "deny"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rustdoc.all = "warn"
rust.dead_code = "allow"

[workspace.lints.clippy]
# all lints that are on by default (correctness, suspicious, style, complexity, perf)
all = { level = "warn", priority = -1 }

# new lints that are still under development
nursery = { level = "warn", priority = -1 }
# avoid lints that are too pedantic
future_not_send = "allow"
fallible_impl_from = "allow"
doc_markdown = "allow"

# lints which are rather strict or have occasional false positives
pedantic = { level = "warn", priority = -1 }
# avoid lints that are too pedantic
must_use_candidate = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
default_trait_access = "allow"
module_name_repetitions = "allow"

[workspace.dependencies]
hashcaster-primitives = { path = "crates/primitives" }
hashcaster-boolcheck = { path = "crates/boolcheck" }
hashcaster-lincheck = { path = "crates/lincheck" }
hashcaster-multiclaim = { path = "crates/multiclaim" }
hashcaster-pcs = { path = "crates/pcs" }

binius_core = { git = "https://github.com/IrreducibleOSS/binius", rev = "fe4cc76" }
binius_field = { git = "https://github.com/IrreducibleOSS/binius", rev = "fe4cc76" }
binius_hal = { git = "https://github.com/IrreducibleOSS/binius", rev = "fe4cc76" }
binius_hash = { git = "https://github.com/IrreducibleOSS/binius", rev = "fe4cc76" }
binius_macros = { git = "https://github.com/IrreducibleOSS/binius", rev = "fe4cc76" }
binius_math = { git = "https://github.com/IrreducibleOSS/binius", rev = "fe4cc76" }
binius_ntt = { git = "https://github.com/IrreducibleOSS/binius", rev = "fe4cc76" }
binius_utils = { git = "https://github.com/IrreducibleOSS/binius", rev = "fe4cc76" }

p3-challenger = { git = "https://github.com/Plonky3/Plonky3", rev = "04358dd" }
p3-keccak = { git = "https://github.com/Plonky3/Plonky3", rev = "04358dd" }
p3-symmetric = { git = "https://github.com/Plonky3/Plonky3", rev = "04358dd" }

derive_more = "1.0"
bytemuck = "1.0"
num-traits = "0.2"
ruint = "1.0"
rayon = "1.0"
rand = "0.8"
itertools = "0.13"
unroll = "0.1"
criterion = "0.5"
groestl_crypto = { package = "groestl", version = "0.10.1" }
serde = "1.0"

[profile.release]
debug = true

[profile.profiling]
inherits = "release"
debug = true

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = "thin"
incremental = true
debug-assertions = false
