[workspace.package]
name = "hashcaster-exploration"
version = "0.1.0"
edition = "2021"
rust-version = "1.84"

[workspace]
members = [
    "crates/boolcheck",
    "crates/primitives",
    "crates/lincheck",
    "crates/multiclaim",
    "crates/pcs",
    "crates/keccak",
]

[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.unreachable_pub = "warn"
rust.unused_must_use = "deny"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rustdoc.all = "warn"
rust.dead_code = "allow"

[workspace.lints.clippy]
# all lints that are on by default (correctness, suspicious, style, complexity, perf)
all = { level = "warn", priority = -1 }

# new lints that are still under development
nursery = { level = "warn", priority = -1 }
# avoid lints that are too pedantic
doc_markdown = "allow"

# lints which are rather strict or have occasional false positives
pedantic = { level = "warn", priority = -1 }
# avoid lints that are too pedantic
must_use_candidate = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
default_trait_access = "allow"
module_name_repetitions = "allow"

[workspace.dependencies]
hashcaster-primitives = { path = "crates/primitives" }
hashcaster-boolcheck = { path = "crates/boolcheck" }
hashcaster-lincheck = { path = "crates/lincheck" }
hashcaster-multiclaim = { path = "crates/multiclaim" }
hashcaster-pcs = { path = "crates/pcs" }
hashcaster-keccak = { path = "crates/keccak" }

binius_core = { git = "https://github.com/IrreducibleOSS/binius", rev = "9791abc" }
binius_field = { git = "https://github.com/IrreducibleOSS/binius", rev = "9791abc" }
binius_hal = { git = "https://github.com/IrreducibleOSS/binius", rev = "9791abc" }
binius_hash = { git = "https://github.com/IrreducibleOSS/binius", rev = "9791abc" }
binius_math = { git = "https://github.com/IrreducibleOSS/binius", rev = "9791abc" }
binius_ntt = { git = "https://github.com/IrreducibleOSS/binius", rev = "9791abc" }

p3-challenger = { git = "https://github.com/Plonky3/Plonky3", rev = "72936761" }
p3-keccak = { git = "https://github.com/Plonky3/Plonky3", rev = "72936761" }
p3-symmetric = { git = "https://github.com/Plonky3/Plonky3", rev = "72936761" }

derive_more = "1.0"
bytemuck = "1.0"
num-traits = "0.2"
ruint = "1.0"
rayon = "1.0"
rand = "0.8"
itertools = "0.13"
unroll = "0.1"
criterion = "0.5"
groestl_crypto = { package = "groestl", version = "0.10.1" }
serde = { version = "1.0", features = ["serde_derive"] }
bincode = "1.3"
clap = { version = "4.5", features = ["derive"] }

[profile.release]
lto = "fat"
codegen-units = 1

[profile.profiling]
inherits = "release"
debug = true

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = "thin"
incremental = true
debug-assertions = false
