[package]
name = "hashcaster-boolcheck"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
hashcaster-primitives = { workspace = true }

num-traits = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
hashcaster-multiclaim = { workspace = true }

[[bench]]
name = "extend"
harness = false
