[package]
name = "hashcaster-boolcheck"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
hashcaster-primitives = { workspace = true }

num-traits = { workspace = true }
rayon = { workspace = true }
bytemuck = { workspace = true, features = ["extern_crate_alloc"] }

[dev-dependencies]
criterion = { workspace = true }
hashcaster-multiclaim = { workspace = true }
rand = { workspace = true }

[[bench]]
name = "extend"
harness = false
