[package]
name = "hashcaster-field"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
derive_more = { workspace = true, features = ["full"] }
bytemuck = { workspace = true, features = [
    "derive",
    "min_const_generics",
    "must_cast",
] }
num-traits = { workspace = true }
