[package]
name = "hashcaster-keccak"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
hashcaster-primitives = { workspace = true }
hashcaster-lincheck = { workspace = true }
hashcaster-boolcheck = { workspace = true }
hashcaster-multiclaim = { workspace = true }
hashcaster-pcs = { workspace = true }

num-traits = { workspace = true }
rayon = { workspace = true }
itertools = { workspace = true }
clap = { workspace = true }

binius_core = { workspace = true }
binius_field = { workspace = true }
binius_hal = { workspace = true }
binius_hash = { workspace = true }
binius_math = { workspace = true }
binius_ntt = { workspace = true }

p3-challenger = { workspace = true }
p3-keccak = { workspace = true }
p3-symmetric = { workspace = true }

groestl_crypto = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
criterion = { workspace = true }
rand = { workspace = true }

[[bench]]
name = "keccak"
harness = false
