[package]
name = "hashcaster-lincheck"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
hashcaster-primitives = { workspace = true }
hashcaster-poly = { workspace = true }

num-traits = { workspace = true }
rayon = { workspace = true }
