[package]
name = "hashcaster-pcs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
hashcaster-primitives = { workspace = true }

binius_core = { workspace = true }
binius_field = { workspace = true }
binius_hal = { workspace = true }
binius_hash = { workspace = true }
binius_math = { workspace = true }
binius_ntt = { workspace = true }

p3-challenger = { workspace = true }
p3-keccak = { workspace = true }
p3-symmetric = { workspace = true }

rayon = { workspace = true }
groestl_crypto = { workspace = true }
serde = { workspace = true }
itertools = { workspace = true }
