[package]
name = "hashcaster-poly"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
hashcaster-field = { workspace = true }

num-traits = { workspace = true }
rayon = { workspace = true }
itertools = { workspace = true }
unroll = { workspace = true }
bytemuck = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
