[package]
name = "hashcaster-primitives"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
derive_more = { workspace = true, features = ["full"] }
bytemuck = { workspace = true, features = [
    "derive",
    "min_const_generics",
    "must_cast",
] }
num-traits = { workspace = true }
ruint = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
unroll = { workspace = true }
itertools = { workspace = true }
