[package]
name = "example-keccak"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
hashcaster-primitives = { workspace = true }
hashcaster-poly = { workspace = true }
hashcaster-lincheck = { workspace = true }
hashcaster-boolcheck = { workspace = true }
hashcaster-multiclaim = { workspace = true }

num-traits = { workspace = true }
rayon = { workspace = true }
itertools = { workspace = true }

[dev-dependencies]
itertools = { workspace = true }
